test/conformance/chainsaw/mutating-policies/subresources/node.yaml
apiVersion: v1
kind: Node
metadata:
  name: kind-controller-plane
status:
  capacity:
    example.com/dongle: "4"
