test/conformance/chainsaw/mutating-policies/subresources/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: mutate-node-status
spec:
  steps:
  - name: create rbac
    try:
    - apply:
        file: rbac.yaml
  - name: create policy
    use:
      template: ../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait policy ready
    use:
      template: ../../_step-templates/mutating-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: mpol-subresources
  - name: step-02
    try:
    - script:
        content: ./modify-resource-filters.sh removeNode
        timeout: 30s
    - script:
        content: ./send-request-to-status-subresource.sh
        timeout: 30s
    - assert:
        file: node.yaml
  - name: step-99
    try:
    - command:
        args:
        - delete
        - mpol
        - mpol-subresources
        - --force
        - --wait=true
        - --ignore-not-found=true
        entrypoint: kubectl
    - script:
        content: ./modify-resource-filters.sh addNode
    - script:
        content: ./clear-modified-node-status.sh
        timeout: 20s
